# evolutiondb-smart-console

./: .dockerignore  .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile  docker-compose.yml
.github/workflows/: docker-publish.yml
cli/: config.h  i18n.h  nl-client.c
src/: http_client.c  http_client.h  main.c  nl_service.c  nl_service.h  provider.h  provider_claude.c  provider_ollama.c  provider_openai.c  schema_client.c  schema_client.h  sql_validator.c  sql_validator.h
